--- a/index.html
+++ b/index.html
@@ -8,39 +8,43 @@
     </head>
 
     <body>
-        <div>
-            <ul>
+        <div class="top">
+            <ul class="left-logo">
                 <li>Header Logo</li>
             </ul>
-            <ul>
+            <ul class="right-links">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </div>
-        <div>
-            <h1>This website is awesome</h1>
-               <div>This website has some subtext that goes here under the main title. 
+        <div class="hero">
+            <div class="hero-left">
+               <h1>This website is awesome</h1>
+               <div class="hero-subtext">This website has some subtext that goes here under the main title. 
                 It's a smaller font and the colour is lower contrast.</div>
-               <button>Sign Up</button>
-               <img src="./images/food-bowl.jpeg" alt="bowl of colourful salad">
+               <button class="sign-up-top">Sign Up</button>
+            </div>
+            <div class="hero-right">
+               <img class=big src="./images/food-bowl.jpeg" alt="bowl of colourful salad">
+            </div>
         </div>
         <div>
             <h2>Some random information</h2>
             <div>
-                <img src="./images/eggs.jpeg" alt="many eggs in cardboard egg box">
+                <img class=small src="./images/eggs.jpeg" alt="many eggs in cardboard egg box">
                 <div>This is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="./images/half-avocado.jpeg" alt="half avocado with pink background">
+                <img class=small src="./images/half-avocado.jpeg" alt="half avocado with pink background">
                 <div>This is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="./images/supplements-pills.jpeg" alt="lots of pills and supplements">
+                <img class=small src="./images/supplements-pills.jpeg" alt="lots of pills and supplements">
                 <div>This is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="./images/three-pears.jpeg" alt="three red pears on a log">
+                <img class=small src="./images/three-pears.jpeg" alt="three red pears on a log">
                 <div>This is some subtext under an illustration or image</div>
             </div>
         </div>
@@ -54,5 +58,6 @@
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
         </div>
+        <footer>Copyright @ The Odin Project 2021</footer>
     </body>
 </html>
