Add style to second page div

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
                <img class=big src="./images/food-bowl.jpeg" alt="bowl of colourful salad">
             </div>
         </div>
-        <div>
-            <h2>Some random information</h2>
-            <div>
+            <h2 class="h2-one">Some random information</h2>
+          <div class="section-two">
+            <div class="img-text">
                 <img class=small src="./images/eggs.jpeg" alt="many eggs in cardboard egg box">
-                <div>This is some subtext under an illustration or image</div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
             </div>
-            <div>
+            <div class="img-text">
                 <img class=small src="./images/half-avocado.jpeg" alt="half avocado with pink background">
-                <div>This is some subtext under an illustration or image</div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
             </div>
-            <div>
+            <div class="img-text">
                 <img class=small src="./images/supplements-pills.jpeg" alt="lots of pills and supplements">
-                <div>This is some subtext under an illustration or image</div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
             </div>
-            <div>
+            <div class="img-text">
                 <img class=small src="./images/three-pears.jpeg" alt="three red pears on a log">
-                <div>This is some subtext under an illustration or image</div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
             </div>
         </div>
-        <div>
+        <div class="quote">
             <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or
             maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <div>-Thor, God of Thunder</div>
