--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
         </div>
         <div class="quote">
-            <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or
-            maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <div>-Thor, God of Thunder</div>
+            <div class="quote-text">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or
+            maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="citation">-Thor, God of Thunder</div>
         </div>
         <div>
             <h2>Call to action! It's time!</h2>
