update style of page section 4

--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
             maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="citation">-Thor, God of Thunder</div>
         </div>
-        <div>
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+        <div class="four">
+          <div class="four-inner">
+            <div class="inner-inner-one">
+              <h2 class="action-header">Call to action! It's time!</h2>
+              <div class="subtext-four">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="inner-inner-two">
+              <button class="bottom-button">Sign up</button>
+            </div>
+          </div>
         </div>
         <footer>Copyright @ The Odin Project 2021</footer>
     </body>
