Add header link example

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li>Header Logo</li>
             </ul>
             <ul class="right-links">
-                <li>header link one</li>
+                <li><a href="#">header link one</a></li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
